texi2html/test/invalid/res/math_not_closed/math_not_closed-l2h_cache.pm

$l2h_cache_key = q/$3\delta + 2
@bye
$/;
$l2h_cache{$l2h_cache_key} = q|<!-- MATH
 $3\delta + 2
@bye$
 -->
<SPAN CLASS="MATH"><IMG
 WIDTH="100" HEIGHT="20" ALIGN="MIDDLE" BORDER="0"
 SRC="math_not_closed_2.png"
 ALT="$3\delta + 2
@bye
$"></SPAN>|;

$l2h_cache_key = q/$\delta + 2
$/;
$l2h_cache{$l2h_cache_key} = q|<SPAN CLASS="MATH"><IMG
 WIDTH="100" HEIGHT="20" ALIGN="MIDDLE" BORDER="0"
 SRC="math_not_closed_1.png"
 ALT="$\delta + 2
$"></SPAN>|;
1;